cabal-version:      2.4
name:               Reservation
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author: gisca

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Reservation
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Test,
                    Room,
                    Message,
                    Misc

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , time
                    , mtl
                    , transformers
                    , split
    hs-source-dirs:   app
    default-language: Haskell2010
